install/kubeadm/multipass/shared/examples/ingress/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-1-18
  name: nginx-1-18
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-1-18
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx-1-18
    spec:
      containers:
      - image: nginx:1.18
        name: nginx
        resources: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-1-19
  name: nginx-1-19
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-1-19
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx-1-19
    spec:
      containers:
      - image: nginx:1.19
        name: nginx
        resources: {}
