install/kubeadm/multipass/shared/examples/ingress/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-1-18
  name: nginx-1-18
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-1-18
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-1-19
  name: nginx-1-19
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-1-19
