install/kubeadm/multipass/shared/examples/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    ingress.kubernetes.io/rewrite-target: "/"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: nginx.apps.example.com
    http:
      paths:
      - backend:
          serviceName: nginx-1-19
          servicePort: 80
        path: /v2
      - backend:
          serviceName: nginx-1-18
          servicePort: 80
        path: /v1
  - host: foo.apps.example.com
    http:
      paths:
      - backend:
          serviceName: nginx-1-19
          servicePort: 80
        path: /v2
      - backend:
          serviceName: nginx-1-18
          servicePort: 80
        path: /v1
